# my-plat

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: full-check.yml  win-check.yml
my_plat/: app.py
tests/: conftest.py  test_app.py  test_app.py_old
